Source/WebInspectorUI/UserInterface/Views/ConsolePrompt.js
@@ -35,7 +35,7 @@ WebInspector.ConsolePrompt = class ConsolePrompt extends WebInspector.View
 
         this._delegate = delegate || null;
 
-        this._codeMirror = CodeMirror(this.element, {
+        this._codeMirror = WebInspector.CodeMirrorEditor.create(this.element, {
             lineWrapping: true,
             mode: mimeType,
             indentWithTabs: true,
